--- a/index.html
+++ b/index.html
@@ -3,10 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Roman Numeral Converter</title>
     <link rel="stylesheet" href="styles.css" />
+    <title>Roman Numeral Converter</title>
   </head>
   <body>
+    <main>
+      <h1 id="title">Roman Numeral Converter</h1>
+      <div id="main">
+        <p>Enter a number:</p>
+        <input type="text" name="text-input" id="number" />
+        <button id="convert-btn">Convert</button>
+        <div id="output"></div>
+      </div>
+    </main>
+    <footer>
+      <p>This project is open source. <a href="https://github.com/Lappage/Roman-Numeral-Converter" target="_blank">Improve this page.</a></p>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
